# analytics-challenge

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  testing.ini  zappa_settings.json
alembic/: env.py
alembic/versions/: 743f75ef25aa_initial_migrations.py  b8e695edbc3a_initial_migration.py
config/: __init__.py  routes.py
docker/deploy/: Dockerfile  entrypoint.sh  uwsgi.ini
src/: app.py
src/metrics/aggregation/application/: aggregate_metric_use_case.py
src/metrics/aggregation/domain/: metric_aggregation_repository.py
src/metrics/aggregation/infrastructure/: controller.py
src/metrics/catalogue/application/: register_metric_use_case.py  retrieve_metrics_use_case.py
src/metrics/catalogue/application/interaction/: register_metric_command_transformer.py
src/metrics/catalogue/domain/: metric_repository.py
src/metrics/catalogue/domain/exception/: agent_level_metric_with_agent_level_parent_metric_not_allowed.py  metric_with_company_level_and_parent_not_allowed.py  parent_metric_doesnt_exist.py  same_name_metric_exists.py
src/metrics/catalogue/infrastructure/: controller.py
src/metrics/core/persistence/: utils.py
src/metrics/records/application/: record_metric_record_use_case.py  retrieve_metric_records_use_case.py
src/metrics/records/domain/: metric_record_repository.py
src/metrics/records/infrastructure/: controller.py
tests/: conftest.py
tests/metrics/aggregation/infrastructure/: test_controller.py
tests/metrics/catalogue/infrastructure/: test_controller.py
tests/metrics/records/infrastructure/: test_controller.py
(+10 files in other folders)
