[tool.poetry]
name = "analytics-challenge"
version = "0.1.0"
description = "Serverless Metrics API"
authors = ["Sergio Perez <serpear@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
python-dotenv = "^0.19.0"
pytest = "^6.2.4"
flask-shell-bpython = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
